# airtools

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  load_test_data.py  pyproject.toml  pytest.ini
airtools/: exceptions.py  types.py
airtools/api/: main.py
airtools/models/: core.py  sensors.py  users.py
airtools/utils/: operations.py
tests/: conftest.py
tests/api/: test_api.py
tests/models/: test_models.py
tests/test_files/csv/: .~lock.2025-02-07_sds011_sensor_88358.csv#  2025-01-20_bme280_sensor_113.csv  2025-02-07_dht22_sensor_88359.csv  2025-02-07_sds011_sensor_88358.csv
tests/utils/: test_utils.py
